docs: xor with NAND, OR and AND

--- a/Notes.ipynb
+++ b/Notes.ipynb
@@ -899,7 +899,7 @@
     "\n",
     "```C++\n",
     "// Add Vector of Neurons\n",
-    "network.push_back(vector<Perceptron>());\n",
+    "network.push_back(vector<Perceptron>()); // Perceptron Constructor, Empty for Now\n",
     "```\n",
     "\n",
     "The above code adds a new vector of `Perceptron` objects for each layer in the network. This sets up the structure for the neurons in each layer, which will be initialized with random weights during the training process.\n"
