docs: xor with NAND, OR and AND

--- a/Notes.ipynb
+++ b/Notes.ipynb
@@ -829,7 +829,6 @@
     "\n",
     "// Run Function\n",
     "// Feeds an Input Vector X into the perceptron to return the activation function output.\n",
-    "\n",
     "double Perceptron::run(std::vector<double> x)\n",
     "{\n",
     "\n",
@@ -843,7 +842,6 @@
     "}\n",
     "\n",
     "// Set the weights. w_init is a vector with the Weights\n",
-    "\n",
     "void Perceptron::set_weights(std::vector<double> w_init)\n",
     "{\n",
     "  weights = w_init; // Copies the vector\n",
@@ -860,19 +858,32 @@
     "Multi Layer Perceptron Implementation\n",
     "*/\n",
     "\n",
-    "// Return a new Perceptron Object with the Specified number of Inputs (+1 for the bias)\n",
+    "// Return a new MLP Object with the Specified number layers, bias and Learning Rate\n",
     "\n",
     "MultiLayerPerceptron::MultiLayerPerceptron(std::vector<size_t> layers, double bias, double eta) : layers(layers), bias(bias), eta(eta)\n",
     "{\n",
     "  // Create Neurons Layer By Layer\n",
-    "\n",
+    "  // Outer Loop\n",
     "  for (size_t i = 0; i < layers.size(); i++)\n",
     "  {\n",
     "    // Add Vector of Values Filled with Zeros\n",
     "    values.push_back(vector<double>(layers[i], 0.0)); // Output of Each Neuron Value set to Zero based on the number of Neurons in Each layer\n",
     "\n",
     "    // Add Vector of Neurons\n",
-    "    network.push_back(vector<Perceptron>());\n",
+    "    network.push_back(vector<Perceptron>()); // Empty Vector of Perceptron\n",
+    "\n",
+    "    // Inner Loop\n",
+    "    // network[0] is the input layer, so it has no neurons\n",
+    "    if (i > 0)\n",
+    "    {\n",
+    "      // Iterate on Each Neuron in the Layer\n",
+    "      for (size_t j = 0; j < layers[i]; j++)\n",
+    "      {\n",
+    "        // Add Perceptron in Every Layer, Starting with the Layer 1, cause 0 is Input Layer\n",
+    "        // Each Perceptron Should Accept the Input as Number of Neurons in the Pervious Layer\n",
+    "        network[i].push_back(Perceptron(layers[i - 1], bias));\n",
+    "      }\n",
+    "    }\n",
     "  }\n",
     "}\n",
     "```\n",
@@ -893,16 +904,45 @@
     "\n",
     "```\n",
     "\n",
-    "The above code creates the necessary layers for the MLP by adding vectors of zeros for each layer. This sets up the structure for the neuron outputs, which will be filled during the forward pass of the network.\n",
+    "The above code creates the necessary layers for the MLP by adding vectors of zeros for each layer.\n",
     "\n",
-    "`vector<double>(layers[i], 0.0)` : Uses the `std::vector` constructor to create a vector of the specified size (`layers[i]`) initialized with zeros (`0.0`).\n",
+    "This `vector<double>(layers[i], 0.0)` calls the `std::vector` constructor to create a vector of the specified size (`layers[i]`) initialized with zeros (`0.0`).\n",
+    "\n",
+    "Which means that the values vector will hold `{{0,0}}` in the first iteration.\n",
     "\n",
     "```C++\n",
     "// Add Vector of Neurons\n",
-    "network.push_back(vector<Perceptron>()); // Perceptron Constructor, Empty for Now\n",
+    "network.push_back(vector<Perceptron>()); // Empty Vector of Perceptrons is added to the end\n",
     "```\n",
     "\n",
-    "The above code adds a new vector of `Perceptron` objects for each layer in the network. This sets up the structure for the neurons in each layer, which will be initialized with random weights during the training process.\n"
+    "The above code adds a new vector of `Perceptron` objects for each layer in the network. This sets up the structure for the neurons in each layer, which will be initialized with random weights during the training process.\n",
+    "\n",
+    "Before `network.push_back(vector<Perceptron>());` the size of `network.size()` is `0`, but after this line, the size becomes `1`.\n",
+    "\n",
+    "Meaning, for the first iteration i.e. input layer, it will create an empty vector of `Perceptron` objects i.e. `network = {{}}`.\n",
+    "\n",
+    "<hr>\n",
+    "\n",
+    "```C++\n",
+    "if (i > 0)\n",
+    "  {\n",
+    "  // Iterate on Each Neuron in the Layer\n",
+    "  for (size_t j = 0; j < layers[i]; j++)\n",
+    "  {\n",
+    "    // Add Perceptron in Every Layer, Starting with the Layer 1, cause 0 is Input Layer\n",
+    "    // Each Perceptron Should Accept the Input as Number of Neurons in the Pervious Layer\n",
+    "    network[i].push_back(Perceptron(layers[i - 1], bias));\n",
+    "  }\n",
+    "  }\n",
+    "```\n",
+    "\n",
+    "In the above code,\n",
+    "\n",
+    "First will be adding `Perceptron` objects to the first hidden layer (layer 1) of the network not the input layer. Therefore, we've `i > 0` condition.\n",
+    "\n",
+    "Then we will start to add the required number of `Perceptron` objects to the current layer (layer `i`) based on the specified architecture in the `layers` vector.\n",
+    "\n",
+    "Note: Each `Perceptron` in the current layer will be initialized with the number of inputs equal to the number of neurons in the previous layer, and the specified bias value. `layers[i - 1]` means the number of neurons in the previous layer (layer `i - 1`).\n"
    ]
   }
  ],
