docs: tomorroew complete MLP Class

--- a/Notes.ipynb
+++ b/Notes.ipynb
@@ -760,7 +760,6 @@
     "  // Run the MLP\n",
     "  std::vector<double> run(std::vector<double> x);\n",
     "\n",
-    "  // For Backpropagation\n",
     "  double bp(std::vector<double> x, std::vector<double> y);\n",
     "\n",
     "  // Attributes\n",
@@ -770,9 +769,22 @@
     "  double bias; // Bias\n",
     "  double eta;  // Learning Rate\n",
     "\n",
-    "  std::vector<std::vector<Perceptron>> network; // Neural Network\n",
-    "  std::vector<std::vector<double>> values;      // Hodl the Output Valuse of the Network\n",
-    "  std::vector<std::vector<double>> d;           // Error Terms for the Neurons\n",
+    "  std::vector<std::vector<Perceptron>> network;\n",
+    "  // 'network' (the outer vector object) is created on the stack.\n",
+    "  // But the actual Perceptrons stored inside inner vectors\n",
+    "  // will be allocated dynamically on the heap.\n",
+    "\n",
+    "  // becuase the outer vector is an Object created on the Stack without the New Keyword\n",
+    "\n",
+    "  std::vector<std::vector<double>> values; // Output values of each neuron in each layer\n",
+    "  // Outer vector object is on stack; inner vectors manage heap-allocated arrays for neuron outputs\n",
+    "\n",
+    "  // becuase the outer vector is an Object created on the Stack without the New Keyword\n",
+    "\n",
+    "  std::vector<std::vector<double>> d; // Error terms (deltas) for each neuron\n",
+    "  // Outer vector object is on stack; inner vectors manage heap-allocated arrays for errors\n",
+    "\n",
+    "  // becuase the outer vector is an Object created on the Stack without the New Keyword\n",
     "};\n",
     "```\n",
     "\n",
@@ -870,7 +882,7 @@
     "    values.push_back(vector<double>(layers[i], 0.0)); // Output of Each Neuron Value set to Zero based on the number of Neurons in Each layer\n",
     "\n",
     "    // Add Vector of Neurons\n",
-    "    network.push_back(vector<Perceptron>()); // Empty Vector of Perceptron\n",
+    "    network.push_back(vector<Perceptron>()); // Creates a temporary empty std::vector<Perceptron> object and pushes it into 'network'. Without '()', we would only refer to the type name, not an object, causing a compiler error.\n",
     "\n",
     "    // Inner Loop\n",
     "    // network[0] is the input layer, so it has no neurons\n",
