docs: XOR Cont..

--- a/Notes.ipynb
+++ b/Notes.ipynb
@@ -954,7 +954,13 @@
     "\n",
     "Then we will start to add the required number of `Perceptron` objects to the current layer (layer `i`) based on the specified architecture in the `layers` vector.\n",
     "\n",
-    "Note: Each `Perceptron` in the current layer will be initialized with the number of inputs equal to the number of neurons in the previous layer, and the specified bias value. `layers[i - 1]` means the number of neurons in the previous layer (layer `i - 1`).\n"
+    "Note: Each `Perceptron` in the current layer will be initialized with the number of inputs equal to the number of neurons in the previous layer, and the specified bias value. `layers[i - 1]` means the number of neurons in the previous layer (layer `i - 1`).\n",
+    "\n",
+    "**set_weights(vector<vector<vector<double>>> w_init) method**\n",
+    "\n",
+    "```C++\n",
+    "\n",
+    "```\n"
    ]
   }
  ],
