--- a/Notes.ipynb
+++ b/Notes.ipynb
@@ -960,6 +960,18 @@
     "\n",
     "```C++\n",
     "\n",
+    "\n",
+    "\n",
+    "```\n",
+    "\n",
+    "<hr>\n",
+    "\n",
+    "**set_weights(vector<vector<vector<double>>> w_init) method**\n",
+    "\n",
+    "```C++\n",
+    "\n",
+    "\n",
+    "\n",
     "```\n"
    ]
   }
