docs: XOR Cont..

--- a/Notes.ipynb
+++ b/Notes.ipynb
@@ -956,6 +956,79 @@
     "\n",
     "Note: Each `Perceptron` in the current layer will be initialized with the number of inputs equal to the number of neurons in the previous layer, and the specified bias value. `layers[i - 1]` means the number of neurons in the previous layer (layer `i - 1`).\n",
     "\n",
+    "<hr>\n",
+    "<hr>\n",
+    "\n",
+    "**set_weights(vector<vector<vector<double>>> w_init) method**\n",
+    "\n",
+    "```C++\n",
+    "// Set Custom Weights\n",
+    "void MultiLayerPerceptron::set_weights(vector<vector<vector<double>>> w_init)\n",
+    "{\n",
+    "  // Write all the weights into the neural network\n",
+    "  // w_init is a vector of vectors of vectors of doubles\n",
+    "  for (size_t i = 0; i < w_init.size(); i++)\n",
+    "  {\n",
+    "    for (size_t j = 0; j < w_init[i].size(); j++)\n",
+    "    {\n",
+    "      network[i + 1][j].set_weights(w_init[i][j]);\n",
+    "    }\n",
+    "  }\n",
+    "\n",
+    "  // Example Weights Initialization\n",
+    "\n",
+    "  // Example of w_init\n",
+    "  vector<vector<vector<double>>> w = {\n",
+    "      {\n",
+    "        {0, 0}, {0, 0}\n",
+    "      },\n",
+    "      {\n",
+    "        {0, 0}\n",
+    "      }\n",
+    "  };\n",
+    "}\n",
+    "\n",
+    "```\n",
+    "\n",
+    "In the above code,\n",
+    "\n",
+    "As our `Constructor` would have initialized,\n",
+    "\n",
+    "`values` as : `{{0,0}.{0,0},{0}}`\n",
+    "\n",
+    "and\n",
+    "\n",
+    "`network` as : `{{},{Perceptron(2,bias),Perceptron(2,bias)},{Perceptron(2,bias)}}`, we can set the weights of the `Perceptron` objects in the network using the `set_weights` method.\n",
+    "\n",
+    "For example, if the\n",
+    "\n",
+    "```C++\n",
+    "std::vector<std::vector<std::vector<double>>> w_init = {\n",
+    "{   // Layer 0 → Hidden\n",
+    "  {20.0, 20.0},   // Hidden neuron 1\n",
+    "  {-20.0, -20.0}   // Hidden neuron 2\n",
+    "},\n",
+    "{   // Layer 1 → Output\n",
+    "  {20.0, 20.0}    // Output neuron\n",
+    "}\n",
+    "};\n",
+    "```\n",
+    "\n",
+    "At first `w_init.size()` will be 2. Then we will need to iterate over `Perceptron` of the 1st Layer i.e. `w_init[0].size` is will be 2 i.e. weights for 2 `Perceptron` of the first layer.\n",
+    "\n",
+    "Then to add the weight in the `Neural Network` starting from the `index 1` as `0 index` does not contain any `Perceptron`.\n",
+    "\n",
+    "To add the weight in the `Neural Network`, we will use the `set_weights(vector<double> w_init)` method of each `Perceptron` object in the network.\n",
+    "\n",
+    "For example, for the `Perceptrons` of first layer,\n",
+    "\n",
+    "`network[1][0].set_weights(w_init[0][0]);` i.e. First `Perceptron` of Layer 1\n",
+    "\n",
+    "`network[1][1].set_weights(w_init[0][1]);` i.e. Second `Perceptron` of Layer 1\n",
+    "\n",
+    "<hr>\n",
+    "<hr>\n",
+    "\n",
     "**set_weights(vector<vector<vector<double>>> w_init) method**\n",
     "\n",
     "```C++\n",
@@ -965,14 +1038,7 @@
     "```\n",
     "\n",
     "<hr>\n",
-    "\n",
-    "**set_weights(vector<vector<vector<double>>> w_init) method**\n",
-    "\n",
-    "```C++\n",
-    "\n",
-    "\n",
-    "\n",
-    "```\n"
+    "<hr>\n"
    ]
   }
  ],
