docs: XOR Cont..

--- a/Notes.ipynb
+++ b/Notes.ipynb
@@ -29,7 +29,7 @@
    "source": [
     "# **Tomorrow**\n",
     "\n",
-    "[OR_Gate](https://www.linkedin.com/learning/training-neural-networks-in-c-plus-plus-22661958/solution-logic-gates-with-perceptrons?resume=false&u=42288921)\n"
+    "[Cont_Run](https://www.linkedin.com/learning/training-neural-networks-in-c-plus-plus-22661958/solution-finish-the-multilayer-perceptron-class?resume=false&u=42288921)\n"
    ]
   },
   {
