--- a/Notes.ipynb
+++ b/Notes.ipynb
@@ -1029,7 +1029,28 @@
     "<hr>\n",
     "<hr>\n",
     "\n",
+    "**set_weights(vector<vector<vector<double>>> w_init) method**\n",
     "\n",
+    "```C++\n",
+    "// Print the Weights\n",
+    "void MultiLayerPerceptron::print_weights()\n",
+    "{\n",
+    "  cout << endl;\n",
+    "\n",
+    "  for (size_t i = 1; i < network.size(); i++)\n",
+    "  {\n",
+    "    for (size_t j = 0; j < layers[i]; j++)\n",
+    "    {\n",
+    "      cout << \"Layer\" << i + 1 << \" Neuron \" << j << \": \";\n",
+    "      for (auto &it : network[i][j].weights)\n",
+    "      {\n",
+    "        cout << it << \" \";\n",
+    "      }\n",
+    "      cout << endl;\n",
+    "    }\n",
+    "  }\n",
+    "}\n",
+    "```\n",
     "\n",
     "<hr>\n",
     "<hr>\n"
