--- a/Notes.ipynb
+++ b/Notes.ipynb
@@ -1029,7 +1029,7 @@
     "<hr>\n",
     "<hr>\n",
     "\n",
-    "**set_weights(vector<vector<vector<double>>> w_init) method**\n",
+    "**print_weights() method**\n",
     "\n",
     "```C++\n",
     "// Print the Weights\n",
