--- a/Notes.ipynb
+++ b/Notes.ipynb
@@ -1052,6 +1052,13 @@
     "}\n",
     "```\n",
     "\n",
+    "In the above code, we are printing the weights of each neuron in the network. We iterate through each layer and each neuron within that layer, printing the weights associated with each neuron.\n",
+    "\n",
+    "<hr>\n",
+    "<hr>\n",
+    "\n",
+    "**`run(vector<double> x)`**\n",
+    "\n",
     "<hr>\n",
     "<hr>\n"
    ]
