--- a/Notes.ipynb
+++ b/Notes.ipynb
@@ -1059,8 +1059,32 @@
     "\n",
     "**`run(vector<double> x)`**\n",
     "\n",
-    "<hr>\n",
-    "<hr>\n"
+    "```C++\n",
+    "// Run the Network\n",
+    "vector<double> MultiLayerPerceptron::run(vector<double> x)\n",
+    "{\n",
+    "  // Run an Input Forward Through the Neural Network\n",
+    "  // x is a vector with the input values\n",
+    "\n",
+    "  // Set the values for the first layer to the given value x, before it was initialized with {0,0}\n",
+    "  values[0] = x;\n",
+    "\n",
+    "  for (size_t i = 1; i < network.size(); i++)\n",
+    "  {\n",
+    "    for (size_t j = 0; j < layers[i]; j++)\n",
+    "    {\n",
+    "      values[i][j] = network[i][j].run(values[i - 1]);\n",
+    "    }\n",
+    "  }\n",
+    "  return values.back(); // Return the output of the last layer\n",
+    "}\n",
+    "```\n",
+    "\n",
+    "In the above code,\n",
+    "\n",
+    "`values[0] = x`\n",
+    "\n",
+    "Here, the initiali value of `values` will be `{{0,0},{0,0},{0,0}}`. \n"
    ]
   }
  ],
