docs: run method completed

--- a/Notes.ipynb
+++ b/Notes.ipynb
@@ -1084,7 +1084,18 @@
     "\n",
     "`values[0] = x`\n",
     "\n",
-    "Here, the initiali value of `values` will be `{{0,0},{0,0},{0,0}}`. \n"
+    "Here, the initial value of `values` will be `{{0,0},{0,0},{0,0}}`. Then we will set the input values for the first layer to the given value `x`, effectively initializing the first layer with the input values i.e. `values = {{input_vector}, {0,0}, {0,0}}`\n",
+    "\n",
+    "We then loop the network i.e. from `1 to network.size() - 1` because the first layer is input layer and we need to process the hidden and output layer.\n",
+    "\n",
+    "Then from each layer we will update the output of each `Perceptron` using the `run` method with the output of the previous layer as input.\n",
+    "\n",
+    "The `run` function will compute the weighted sum of the inputs and apply the activation i.e. `Sigmoid` and return the output which will be stored as `values[i][j]`.\n",
+    "\n",
+    "This way all the outputs from the previous layer are used as inputs for the next layer, allowing the network to learn complex patterns in the data.\n",
+    "\n",
+    "Finally, we return the output of the last layer using `return values.back();`, which gives us the final output of the MLP for the given input `x`. Because \n",
+    "\n"
    ]
   }
  ],
