docs: run method completed

--- a/Notes.ipynb
+++ b/Notes.ipynb
@@ -1094,8 +1094,7 @@
     "\n",
     "This way all the outputs from the previous layer are used as inputs for the next layer, allowing the network to learn complex patterns in the data.\n",
     "\n",
-    "Finally, we return the output of the last layer using `return values.back();`, which gives us the final output of the MLP for the given input `x`. Because \n",
-    "\n"
+    "Finally, we return the output of the last layer using `return values.back();`, which gives us the final output of the MLP for the given input `x`. Because the last value of `values` is the output from the last layer of the network.\n"
    ]
   }
  ],
