docs: run method completed

--- a/Notes.ipynb
+++ b/Notes.ipynb
@@ -1094,7 +1094,18 @@
     "\n",
     "This way all the outputs from the previous layer are used as inputs for the next layer, allowing the network to learn complex patterns in the data.\n",
     "\n",
-    "Finally, we return the output of the last layer using `return values.back();`, which gives us the final output of the MLP for the given input `x`. Because the last value of `values` is the output from the last layer of the network.\n"
+    "Finally, we return the output of the last layer using `return values.back();`, which gives us the final output of the MLP for the given input `x`. Because the last value of `values` is the output from the last layer of the network.\n",
+    "\n",
+    "<hr>\n",
+    "<hr>\n",
+    "\n",
+    "### **`neuralNet.cpp`**\n",
+    "\n",
+    "Now will implement the complete code for `XOR` Gate.\n",
+    "\n",
+    "\n",
+    "```C++\n",
+    "\n"
    ]
   }
  ],
