docs: cont implementation

--- a/Notes.ipynb
+++ b/Notes.ipynb
@@ -1105,7 +1105,46 @@
     "\n",
     "```C++\n",
     "\n",
-    "```\n"
+    "// XOR Gate\n",
+    "  // Instaintiate with 2 inputs, 2 Perceptron in hidden and 1 Perceptron in the Output\n",
+    "  MultiLayerPerceptron mlp({2, 2, 1});\n",
+    "\n",
+    "  // Set the Weights, NAND Gate, OR Gate and then AND Gate\n",
+    "  mlp.set_weights(\n",
+    "      {{{-10, -10, 15}, {15, 15, -10}},\n",
+    "       {{10, 10, -15}}});\n",
+    "\n",
+    "  cout << endl;\n",
+    "\n",
+    "  // Print Weights\n",
+    "  cout << \"Hardcoded Weights:\" << endl;\n",
+    "  mlp.print_weights();\n",
+    "\n",
+    "  cout << endl;\n",
+    "\n",
+    "  // Run the Network\n",
+    "  cout << \"XOR: \" << endl;\n",
+    "  cout << \"0 0 = \" << mlp.run({0, 0})[0] << endl; // For 0 0 Input, Output should be  0.00669585\n",
+    "  cout << \"0 0 = \" << mlp.run({0, 1})[0] << endl; // For 0 1 Input, Output should be  1\n",
+    "  cout << \"0 0 = \" << mlp.run({1, 0})[0] << endl; // For 1 0 Input, Output should be  1\n",
+    "  cout << \"0 0 = \" << mlp.run({1, 1})[0] << endl; // For 1 1 Input, Output should be  0\n",
+    "\n",
+    "// Output\n",
+    "\n",
+    "// Hardcoded Weights:\n",
+    "\n",
+    "// Layer2 Neuron 0: -10 -10 15\n",
+    "// Layer2 Neuron 1: 15 15 -10\n",
+    "// Layer3 Neuron 0: 10 10 -15\n",
+    "\n",
+    "// XOR:\n",
+    "// 0 0 = 0.00669585\n",
+    "// 0 0 = 0.992356\n",
+    "// 0 0 = 0.992356\n",
+    "// 0 0 = 0.00715281\n",
+    "```\n",
+    "\n",
+    "In the above code, we are implementing a Multi-Layer Perceptron (MLP) to solve the XOR problem. The MLP consists of an input layer, a hidden layer, and an output layer. We hardcode the weights for the neurons in each layer to mimic the behavior of the XOR gate. The `print_weights()` method displays the weights of each neuron, and the `run()` method takes an input vector and computes the output of the network by propagating the inputs through the layers. Finally, we test the network with all possible combinations of binary inputs for the XOR gate and print the results.\n"
    ]
   }
  ],
