docs: cont implementation

--- a/Notes.ipynb
+++ b/Notes.ipynb
@@ -1144,7 +1144,216 @@
     "// 0 0 = 0.00715281\n",
     "```\n",
     "\n",
-    "In the above code, we are implementing a Multi-Layer Perceptron (MLP) to solve the XOR problem. The MLP consists of an input layer, a hidden layer, and an output layer. We hardcode the weights for the neurons in each layer to mimic the behavior of the XOR gate. The `print_weights()` method displays the weights of each neuron, and the `run()` method takes an input vector and computes the output of the network by propagating the inputs through the layers. Finally, we test the network with all possible combinations of binary inputs for the XOR gate and print the results.\n"
+    "In the above code, we are implementing a Multi-Layer Perceptron (MLP) to solve the XOR problem. The MLP consists of an input layer, a hidden layer, and an output layer. We hardcode the weights for the neurons in each layer to mimic the behavior of the XOR gate. The `print_weights()` method displays the weights of each neuron, and the `run()` method takes an input vector and computes the output of the network by propagating the inputs through the layers. Finally, we test the network with all possible combinations of binary inputs for the XOR gate and print the results.\n",
+    "\n",
+    "<hr>\n",
+    "<hr>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "28401114",
+   "metadata": {},
+   "source": [
+    "## **Mathematical Intution Behind XOR Gate**\n",
+    "\n",
+    "<hr>\n",
+    "\n",
+    "First, let's look at our Neural Network,\n",
+    "\n",
+    "Hidden 1 (NAND): $(-10,-10; \\, +15)$\n",
+    "\n",
+    "Hidden 2 (OR): $(+15,+15; \\, -10)$\n",
+    "\n",
+    "Output (AND): $(+10,+10; \\, -15)$\n",
+    "\n",
+    "Let $\\sigma(t)=\\dfrac{1}{1+e^{-t}}$.\n",
+    "\n",
+    "# Hidden layer\n",
+    "\n",
+    "$$\n",
+    "\\begin{aligned}\n",
+    "z_1 &= -10x_1-10x_2+15,\n",
+    "&h_1 &= \\sigma(z_1),\\\\[2pt]\n",
+    "z_2 &= \\phantom{-}15x_1+15x_2-10,\n",
+    "&h_2 &= \\sigma(z_2).\n",
+    "\\end{aligned}\n",
+    "$$\n",
+    "\n",
+    "# Output neuron\n",
+    "\n",
+    "$$\n",
+    "z_{\\text{out}} = 10h_1+10h_2-15,\\qquad\n",
+    "y=\\sigma(z_{\\text{out}}).\n",
+    "$$\n",
+    "\n",
+    "# Explicit closed-form (final equation)\n",
+    "\n",
+    "$$\n",
+    "\\boxed{\\;\n",
+    "y(x_1,x_2)=\\sigma\\!\\Big(\n",
+    "10\\,\\sigma(-10x_1-10x_2+15)\\;+\\;10\\,\\sigma(15x_1+15x_2-10)\\;-\\;15\n",
+    "\\Big)\\; }\n",
+    "$$\n",
+    "\n",
+    "# Decision boundaries (hyperplanes at $\\sigma=0.5$)\n",
+    "\n",
+    "- Hidden 1 (NAND): $z_1=0 \\iff \\boxed{x_1+x_2=1.5}$.\n",
+    "- Hidden 2 (OR): $z_2=0 \\iff \\boxed{x_1+x_2=\\tfrac{10}{15}=\\tfrac{2}{3}}$.\n",
+    "- Output (in $(h_1,h_2)$-space): $z_{\\text{out}}=0 \\iff \\boxed{h_1+h_2=1.5}$.\n",
+    "\n",
+    "Pulled back to $(x_1,x_2)$-space, the **final decision boundary** is the implicit curve\n",
+    "\n",
+    "$$\n",
+    "\\boxed{\\;\\sigma(-10x_1-10x_2+15)\\;+\\;\\sigma(15x_1+15x_2-10)\\;=\\;1.5\\;}\n",
+    "$$\n",
+    "\n",
+    "(Region “$y>0.5$” is where the left-hand side $>\\,1.5$.)\n",
+    "\n",
+    "<hr>\n",
+    "\n",
+    "But how?\n",
+    "\n",
+    "### 1. Reminder: what happens for AND\n",
+    "\n",
+    "For the AND gate with weights $(10,10,-15)$, the **decision boundary** was\n",
+    "\n",
+    "$$\n",
+    "\\sigma(10x_1+10x_2-15)=0.5 \\;\\;\\Longleftrightarrow\\;\\; 10x_1+10x_2-15=0,\n",
+    "$$\n",
+    "\n",
+    "because $\\sigma(z)=0.5 \\iff z=0$. That’s a straight line.\n",
+    "\n",
+    "So a **single perceptron** always produces a _linear_ boundary.\n",
+    "\n",
+    "### 2. XOR with 2 hidden neurons\n",
+    "\n",
+    "Now for XOR, the **output neuron** takes two hidden activations:\n",
+    "\n",
+    "$$\n",
+    "h_1 = \\sigma(-10x_1 - 10x_2 + 15), \\qquad\n",
+    "h_2 = \\sigma(15x_1 + 15x_2 - 10).\n",
+    "$$\n",
+    "\n",
+    "Then at the output:\n",
+    "\n",
+    "$$\n",
+    "z_{\\text{out}} = 10h_1 + 10h_2 - 15, \\quad\n",
+    "y=\\sigma(z_{\\text{out}}).\n",
+    "$$\n",
+    "\n",
+    "The **decision boundary** is $y=0.5 \\iff z_{\\text{out}}=0$:\n",
+    "\n",
+    "$$\n",
+    "10h_1 + 10h_2 - 15 = 0\n",
+    "\\quad\\Longleftrightarrow\\quad\n",
+    "h_1 + h_2 = 1.5.\n",
+    "$$\n",
+    "\n",
+    "### 3. Why it’s nonlinear in $(x_1, x_2)$\n",
+    "\n",
+    "Substitute the hidden activations:\n",
+    "\n",
+    "$$\n",
+    "\\sigma(-10x_1-10x_2+15) + \\sigma(15x_1+15x_2-10) = 1.5.\n",
+    "$$\n",
+    "\n",
+    "Each term here is a **sigmoid of a linear function**.\n",
+    "\n",
+    "- A sigmoid of a line is an **S-shaped curve**, not a line.\n",
+    "- The **sum of two sigmoids = constant** is generally a _curved contour_.\n",
+    "\n",
+    "That’s why the boundary is **not linear** anymore—it bends.\n",
+    "\n",
+    "### 4. Visual intuition\n",
+    "\n",
+    "- For a **single perceptron**, the boundary is always a straight line, because the “0.5 cutoff” corresponds to the input = 0.\n",
+    "\n",
+    "- But once you **stack perceptrons** (like in XOR), the output depends on hidden nonlinearities. The “boundary = 0.5” condition then becomes an implicit equation involving **sums of sigmoids**, which defines a **nonlinear curve**.\n",
+    "\n",
+    "- In the **steep-weight limit**, the sigmoids approximate steps. Then the boundary becomes a polygon-shaped region:\n",
+    "\n",
+    "  $$\n",
+    "  \\tfrac{2}{3} < x_1+x_2 < 1.5,\n",
+    "  $$\n",
+    "\n",
+    "  which is not a line, but the _intersection of two half-planes_ → that’s what makes XOR work.\n",
+    "\n",
+    "So, the reason it’s “not a line” is because once you include multiple hidden sigmoids, the boundary equation is no longer linear in $(x_1, x_2)$; it’s the **level set of a sum of nonlinear functions**.\n",
+    "\n",
+    "Would you like me to **plot this curve step by step** (showing how it bends between the four XOR points), so you see exactly why it isn’t a line?\n",
+    "\n",
+    "<hr>\n",
+    "\n",
+    "# Exact numeric evaluations on $\\{0,1\\}^2$\n",
+    "\n",
+    "$$\n",
+    "\\begin{array}{c|c|c|c|c}\n",
+    "(x_1,x_2) & (z_1,h_1) & (z_2,h_2) & z_{\\text{out}} & y=\\sigma(z_{\\text{out}})\\\\ \\hline\n",
+    "(0,0) & (15,\\;0.9999996941) & (-10,\\;4.5398{\\times}10^{-5}) & -4.99954908 & 0.00669585\\\\\n",
+    "(0,1) & (5,\\;0.9933071491) & (5,\\;0.9933071491) & \\phantom{-}4.86614298 & 0.99235586\\\\\n",
+    "(1,0) & (5,\\;0.9933071491) & (5,\\;0.9933071491) & \\phantom{-}4.86614298 & 0.99235586\\\\\n",
+    "(1,1) & (-5,\\;0.0066928509) & (20,\\;0.9999999980) & -4.93307151 & 0.00715281\n",
+    "\\end{array}\n",
+    "$$\n",
+    "\n",
+    "(Threshold $0.5$ yields XOR: $0,1,1,0$.)\n",
+    "\n",
+    "# Why the solution is not linear\n",
+    "\n",
+    "- Each $h_i=\\sigma(a_ix_1+b_ix_2+c_i)$ is **nonlinear** in $(x_1,x_2)$.\n",
+    "- The final boundary is the **nonlinear** implicit curve\n",
+    "  $\\sigma(-10x_1-10x_2+15)+\\sigma(15x_1+15x_2-10)=1.5$ (not a line).\n",
+    "- In the large-slope limit, $\\sigma$ behaves like a Heaviside step, giving the band\n",
+    "  $\\tfrac{2}{3}<x_1+x_2<1.5$ as the positive region—again **not** a single hyperplane.\n",
+    "\n",
+    "These equations fully specify the XOR realized by your MLP.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ecf51aae",
+   "metadata": {},
+   "source": [
+    "## **Why Training is Needed in the MLP?**\n",
+    "\n",
+    "If we've noticed,\n",
+    "\n",
+    "Until this point we've been using hardcoded weights for our neurons in the Multi-Layer Perceptron (MLP). This approach allows us to quickly test the network's behavior without going through the training process. However, hardcoding weights is not a scalable solution for more complex problems or larger datasets.\n",
+    "\n",
+    "<hr>\n",
+    "\n",
+    "Also, for small problems like solving `AND`, `OR` and `XOR` functions we can use other alternatives as well i.e. `Programming Logic` instead of `Neural Network`.\n",
+    "\n",
+    "Because, the real value of `Neural Network` is its ability to learn complex patterns and generalize from examples, making it suitable for a wide range of tasks beyond simple logic functions.\n",
+    "\n",
+    "Instead of hardcoding weights, how about we show a lots of examples of how an `XOR` behaves so that it can learn from those examples?\n",
+    "\n",
+    "For that we use an algorithm called `backpropagation`, which is a supervised learning algorithm used for training artificial neural networks.\n",
+    "\n",
+    "### **Reasons to Train a Neural Network**\n",
+    "\n",
+    "**Linear Separability Is Hardly a Given**\n",
+    "\n",
+    "In many real-world problems, the data is not linearly separable. This means that a simple linear decision boundary (a straight line in 2D, for example) cannot effectively separate the different classes in the data. Neural networks, especially those with hidden layers, can learn complex, non-linear decision boundaries, making them much more powerful for a wide range of tasks.\n",
+    "\n",
+    "Take the below example:\n",
+    "\n",
+    "Suppose we're trying to classify `Small or Large` based on `Length` and `Width`. Below is the scatter plot of the data points:\n",
+    "\n",
+    "<img src=\"./Notes_Images/l_w.png\" alt=\"Scatter Plot\">\n",
+    "\n",
+    "Here, we can see that the closest we can draw a line that classifies with less error is the `line` i.e `Single Perceptron` shown in the graph. We've misclassified some points, indicating that a linear boundary is not sufficient for this problem.\n",
+    "\n",
+    "To improve, we can use `MLP` to generalize the decision boundary and better classify the data points.\n",
+    "\n",
+    "Below is the graph:\n",
+    "\n",
+    "<img src=\"./Notes_Images/mlp_db.png\" alt=\"Scatter Plot\">\n",
+    "\n",
+    "We can see here, we are only misclassifying one data point. It's better but not perfect, and that's what we are looking for.\n",
+    "\n",
+    "That is the whole point of training a neural network: to minimize misclassifications and improve accuracy.\n"
    ]
   }
  ],
