docs: cont implementation

--- a/Notes.ipynb
+++ b/Notes.ipynb
@@ -1281,7 +1281,15 @@
     "\n",
     "So, the reason it’s “not a line” is because once you include multiple hidden sigmoids, the boundary equation is no longer linear in $(x_1, x_2)$; it’s the **level set of a sum of nonlinear functions**.\n",
     "\n",
-    "Would you like me to **plot this curve step by step** (showing how it bends between the four XOR points), so you see exactly why it isn’t a line?\n",
+    "Below is the **plot this curve** (showing how it bends between the four XOR points), so you see exactly why it isn’t a line?\n",
+    "\n",
+    "<img src='./Notes_Images/xor_graph.png'>\n",
+    "\n",
+    "**Desmos for XOR**\n",
+    "\n",
+    "<img src='./Notes_Images/desmos_xor.png'>\n",
+    "\n",
+    "This shows that `XOR` needs two half-planes rather than one.\n",
     "\n",
     "<hr>\n",
     "\n",
